fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -94,6 +94,6 @@
 
 @utility is-empty {
   .editor &h1 {
-    @apply first:before:pointer-events-none first:before:float-left first:before:h-0 first:before:text-sm first:before:text-neutral-500 first:before:content-[attr(data-placeholder)];
+    @apply first:before:pointer-events-none first:before:hidden first:before:float-left first:before:h-0 first:before:text-sm first:before:text-neutral-500 first:before:content-[attr(data-placeholder)];
   }
 }
